<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/tv1"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/tv2"/>
            <Button
                android:id="@+id/btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_text"/>
            <Button 
                android:id="@+id/btn_ignore_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_ignore_list_text"
            />
            <ImageView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/all"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>